After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771297 - constraints: Don't early out of custom rule if window can't fit
constraints: Don't early out of custom rule if window can't fit
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: wayland
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
: 774633 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2016-09-12 13:26 UTC by Jonas Ådahl
Modified: 2017-09-03 08:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
constraints: Don't early out of custom rule if window can't fit (1.01 KB, patch)
2016-09-12 13:26 UTC, Jonas Ådahl
committed Details | Review

Description Jonas Ådahl 2016-09-12 13:26:38 UTC
Fixes very long menus placement on gnome-shell on Wayland.
Comment 1 Jonas Ådahl 2016-09-12 13:26:43 UTC
Created attachment 335364 [details] [review]
constraints: Don't early out of custom rule if window can't fit

Still go through the rules. For example a tall menu might still be
positioned better, and/or shrunk to a better size if applicable.
Comment 2 Rui Matos 2016-09-14 13:56:39 UTC
Review of attachment 335364 [details] [review]:

Yeah this was kind of defeating the point :-)
Comment 3 Jonas Ådahl 2016-11-21 04:53:06 UTC
Attachment 335364 [details] pushed as 2ed7ca5 - constraints: Don't early out of custom rule if window can't fit
Comment 4 Daniel Boles 2017-09-03 08:40:33 UTC
*** Bug 774633 has been marked as a duplicate of this bug. ***